added gitignore and updated UI properties

--- a/Example Project (iOS)/Base.lproj/Main.storyboard
+++ b/Example Project (iOS)/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KUU-Na-RPC">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Enter name of the movie" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KUU-Na-RPC" customClass="TextField" customModule="Example_Project__iOS_" customModuleProvider="target">
                                 <rect key="frame" x="10" y="98" width="284" height="40"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
