--- a/Example Project (iOS)/Base.lproj/Main.storyboard
+++ b/Example Project (iOS)/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="movieCell" id="3RC-Cb-0MV" customClass="MovieCell" customModule="Example_Project__iOS_" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCell" id="3RC-Cb-0MV" customClass="MovieCell" customModule="Example_Project__iOS_" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="135" height="169"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DHo-c6-mE0">
